# GAMM

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  default_matrices.toml
baseline/: eigen.cpp  eigen.sh  numpy.py
src/: bamm.rs  baseline_single.rs  basic_multi.rs  common.rs  config.rs  energy_meter.rs  inter.rs  intra.rs  jts_multi.rs  lib.rs  main.rs  self_svd_single.rs  single.rs  svd.rs
src/libsvd/: multi.rs
src/svd/: calculator.rs  mod.rs  rotation.rs  worker_phase1.rs  worker_phases_group.rs  worker_phases_simple_par.rs
