[package]
name = "gamm"
version = "0.1.0"
edition = "2021"
default-run = "gamm"

[dependencies]
nalgebra = "0.31.3"
num-traits = "0.2.15"
serde = { version="1.0.147", features=["derive"] }
toml = "0.5.9"

[features]
# Enabling this feauture prevents inlining of a few functions to provide better profiling output
profile=[]
# Enabling this feauture uses "group" parallelism of JTS in inter-parallelism. If not enabled,
# simple-parallelism will be used instead
group=[]
# Enabling this feature prints the number of iterations taken to perform the SVD for JTS (both
# sequential and parallel)
print-iter=[]

[profile.release]
debug = true
